              if invoked with SIGCHLD ignored.  Introduced in 10.56
              (September 2011).

              pbmtoepsi: fix handling of all-white image.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoepsi: fix excessively long raster line.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              ppmpat: fix crash with -squig with aspect ratio < 1:25 or
              > 25:1. Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              Always broken.

              Fix wild pointer dereference when memory allocation for a string
              fails.  Broken since 10.36 (September 2006).

              Build for big-endian machines: fix syntax error so it compiles.
              Introduced in 10.63 (June 2013).

              Fix compile failure on system such as OpenBSD that don't have
              SIGWINCH and SIGIO.  Broken since 10.49 (December 2009).

              Build: Use SSE2 vector instructions when compiling with Clang,
              as done already with GCC.

              Build: Use <emmintrin.h> interface for SSE intrinsics
              instead of GCC-specific versions.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              Build on system without vasprintf (not GNU libc): fix compiler
              warning.

              Apple build: use vasprintf.

13.09.28 BJH  Release 10.64.00

              pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
              (September 2009).

              libnetpbm, pnmpsnr, ppmcie on systems that don't use GNU C
              library: fix bogus printing of floating point numbers.

              test: fix ppmhist lack of sorting.

13.06.29 BJH  Release 10.63.00

              Add pamtowinicon, winicontopam.  Thanks Ludolf Holzheid
              (lholzheid@bihl-wiedemann.de).

              pgmnoise: add -maxval, speed up.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.
